--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,31 +1,21 @@
 trigger:
-  - main
+  branches:
+    include:
+      - main
 
 pool:
-  # vmImage: 'ubuntu-latest'
-  name: Default
-
-variables:
-  imageName: 'mini-devops-app'
+  name: Default  # This tells Azure to use your own VM
 
 steps:
-
-- checkout: self
-
-- script: |
-    echo "Building Docker image..."
-    docker build -t $(imageName) .
-  displayName: 'Build Docker Image'
-
-- script: |
-    echo "Tagging image for Docker Hub..."
-    docker tag $(imageName) kesavakiran/$(imageName):latest
-  displayName: 'Tag Image'
-
-- task: Docker@2
+- task: NodeTool@0
   inputs:
-    containerRegistry: 'DockerHubConnection'
-    command: 'push'
-    repository: 'kesavakiran/$(imageName)'
-    tags: 'latest'
-  displayName: 'Push Image to Docker Hub'
+    versionSpec: '18.x'
+  displayName: 'Install Node.js'
+
+- script: |
+    npm install
+  displayName: 'Install dependencies'
+
+- script: |
+    echo "Build step successful"
+  displayName: 'Build Step'
